# YOLO_Robot

devel/: .catkin  local_setup.sh
devel/include/move_plan/: BoundingBox.h  BoundingBoxes.h
devel/include/yolov5_ros_msgs/: BoundingBox.h  BoundingBoxes.h
devel/lib/move_plan/: plan
devel/lib/pkgconfig/: move_plan.pc  yolov5_ros.pc  yolov5_ros_msgs.pc
devel/lib/python2.7/dist-packages/move_plan/msg/: _BoundingBox.py  _BoundingBoxes.py
devel/lib/python2.7/dist-packages/yolov5_ros_msgs/msg/: _BoundingBox.py  _BoundingBoxes.py
devel/share/common-lisp/ros/move_plan/msg/: BoundingBox.lisp  BoundingBoxes.lisp  _package.lisp  _package_BoundingBox.lisp  _package_BoundingBoxes.lisp  move_plan-msg.asd
devel/share/common-lisp/ros/yolov5_ros_msgs/msg/: BoundingBox.lisp  (+2 more)
devel/share/move_plan/cmake/: move_plan-msg-extras.cmake  move_plan-msg-paths.cmake  move_planConfig.cmake
devel/share/roseus/ros/move_plan/: manifest.l
devel/share/roseus/ros/yolov5_ros_msgs/: manifest.l
devel/share/yolov5_ros/cmake/: yolov5_rosConfig.cmake
devel/share/yolov5_ros_msgs/cmake/: yolov5_ros_msgs-msg-extras.cmake  yolov5_ros_msgs-msg-paths.cmake  yolov5_ros_msgsConfig.cmake
src/move_plan/: CMakeLists.txt  package.xml
src/move_plan/include/move_plan/: move_plan.h
src/move_plan/launch/: move_plan.launch
src/move_plan/msg/: BoundingBox.msg
src/move_plan/src/: YOLO.cpp  image.py  move_plan.cpp  test.cpp  test_back.cpp  testv1.cpp
src/yolo_detect/scripts/: getimage.py  yolo_v5.py
yolov5_ros_msgs/: CMakeLists.txt  package.xml
yolov5_ros_msgs/msg/: BoundingBox.msg
(+8 files in other folders)
